--- a/templates/key.html
+++ b/templates/key.html
@@ -55,7 +55,7 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 0px">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Our Oceans</a>
+    <a class="navbar-brand" href="/">Our Oceans</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,20 +63,20 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Background
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item active" href="#">Key</a></li>
-            <li><a class="dropdown-item" href="humidity.html">The Process</a></li>
-            <li><a class="dropdown-item" href="winds.html">Data Sources</a></li>
+            <li><a class="dropdown-item" href="/process">The Process</a></li>
+            <li><a class="dropdown-item" href="/sources">Data Sources</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="comparison.html">Comparison</a>
+          <a class="nav-link" href="/analysis">Analysis</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="data.html">Data</a>
+          <a class="nav-link" href="/data">Data</a>
         </li>
       </ul>
     </div>
@@ -99,8 +99,7 @@
       <b>Eutrophication Map</b>: This is a map showing eutrophication in our oceans. Eutrophication is frequently caused by runoff from the land, and causes death of animal life from lack of oxygen.<br />
       <b>Eutrophic</b>: A body of water rich in nutrients, supporting dense plant population. <br />
       <b>Hypoxic</b>: Water that is hypoxic is low in oxygen, with dissolved oxygen concentrations of less than 2-3 mg/L.<br />
-      <b>Zones/Area Codes</b><br />
-      <b>FAO Fishing Areas</b>: FAO is an acronym for the Fish and Agriculture Organization. This organization has defined the fishing zones.<br />
+      <b>FAO Fishing Areas</b>: FAO is an acronym for the Food and Agriculture Organization. This organization has defined the fishing zones. These zones can be seen on FAO's website <a href="https://www.fao.org/fishery/en/area/search" target="_blank">here</a>.<br />
     </p>
 
   </div>
@@ -108,11 +107,13 @@
       <h3>Boating/Fishing Terms</h3>
       <p>
         <b>Trawler</b>: Commercial fishing boats which drag nets through the water to trap fish. This fishing method often leads to catching and killing ocean life not meant to be fished.<br />
-        <b>Troller</b><br />
+        <b>Troller</b>: These fishing boats operate by allowing a line out with bait and using the current or motor power to pull the bait to attract fish.<br />
         <b>Pole and Line</b>: Boats where fishermen are using traditional pole and line fishing techniques.<br />
-        <b>Purse Seine</b><br />
-        <b>Drifting Long Lines</b> <br />
-        </p>
+        <b>Purse Seine</b>: This is a large wall of netting dropped into the water around an entire school of fish.<br />
+        <b>Drifting Longlines</b>: Vessels fishing with a drifting longline have a main line kept near the surface with many lines with baited hooks spaced evenly across it. <br />
+        <b>MMSI</b>: Maritime Mobile Service Identity, an identifier for AIS<br />
+        
+    </p>
   </div>
 </div>
 
