--- a/templates/sources.html
+++ b/templates/sources.html
@@ -48,7 +48,7 @@
 <div class="row">
   <div class="col-md-12 jumbotron text-center">
     <h1>Human Impact on Oceans Dashboard</h1>
-    <p>Where we sourced our data</p>
+    <p>Citing our sources!</p>
   </div>
 </div>
 
@@ -72,8 +72,14 @@
             <li><a class="dropdown-item active" href="#">Data Sources</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/analysis">Analysis</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Analysis
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/direct">Fishing and Fish Population</a></li>
+            <li><a class="dropdown-item" href="/indirect">Indirect Effects of Human Activity</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/data">Data</a>
@@ -100,16 +106,18 @@
       <b><a href="https://globalfishingwatch.org/" target="_blank">https://globalfishingwatch.org/</a></b>&nbsp;&nbsp;&nbsp; This source provided the data we used on fishing vessels. GFW combines publicly available tracking data with data acquired through ship monitorying systems operated by governments and made available through partnerships they've secured. <br />
       <b><a href="https://www.fao.org/about/en/" target="_blank">https://www.fao.org/about/en/</a></b>&nbsp;&nbsp;&nbsp; The Food and Agriculture Organization is a specialized agency of the UN, leading international efforts to achieve food security.<br />
       <b><a href="https://www.wri.org/" target="_blank">https://www.wri.org/</a></b>&nbsp;&nbsp;&nbsp; World Resources Institute is a global research organization focused around global challenges such as food, water, energy, climate and ocean.<br />
-
+      <b><a href="https://www.naturalearthdata.com/" target="_blank">https://www.naturalearthdata.com/</a></b>&nbsp;&nbsp;&nbsp; World currents and river data found here.<br />
+      <b><a href="https://debristracker.org/data/" target="_blank">https://debristracker.org/data/</a></b>&nbsp;&nbsp;&nbsp; Dataset on marine debris was sourced from this website.<br />
     </p>
-
+    
   </div>
   <div class="col-md-5 defs">
       <h3>Other Information</h3>
       <h5>Websites with relevant information:</h5><br/>
       <p>
         <b><a href="https://www.naturalworldfacts.com/" target="_blank">https://www.naturalworldfacts.com/</a></b>&nbsp;&nbsp;&nbsp; A community developed by/for people passionate about nature. <br />
-        <b> </b><br />
+        <b><a href="https://openweathermap.org/" target="_blank">https://openweathermap.org/</a></b>&nbsp;&nbsp;&nbsp; Our base maps were found here. <br />
+        <b><a href="https://turfjs.org/" target="_blank">https://turfjs.org/</a></b>&nbsp;&nbsp;&nbsp; We used this javascript library for advanced geospatial analysis for browsers. <br />
         </p>
   </div>
 </div>
