--- a/templates/index.html
+++ b/templates/index.html
@@ -10,34 +10,11 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
         crossorigin="anonymous">
 
-    <!-- D3 JavaScript -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-
     <!--import popper js-->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <!--import bootswatch theme. see api: https://bootswatch.com/api/5.json-->
         <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.css" >
-
-    <!-- MomentJS -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin="" />
-
-    <!-- Leaflet JavaScript code -->
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-    crossorigin=""></script>
-
-    <!-- Leaflet plugin-->
-    <script type="text/javascript" src="static/js/leaflet.extra-markers.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="static/css/leaflet.extra-markers.min.css">
-    <script src="static/js/openweathermap.js"></script>
-    <link rel="stylesheet" href="static/css/leaflet-openweathermap.css">
 
 
     <!-- Our CSS -->
@@ -72,8 +49,14 @@
             <li><a class="dropdown-item" href="/sources">Data Sources</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/analysis">Analysis</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Analysis
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/direct">Fishing and Fish Population</a></li>
+            <li><a class="dropdown-item" href="/indirect">Indirect Effects of Human Activity</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/data">Data</a>
@@ -92,28 +75,21 @@
 
 
 <div class="row">
-  <div class = "col-md-3">
-    <p style = "text-align: center;">Toggle the settings on the map below to explore our oceans. See the ocean currents, temperature, and eutrophication. Do you see any patterns? </p>
+  <div class = "col-md-2">
+    <p style = "text-align: center;"></p>
   </div>
-  <div class = "col-md-6 justify-content-center">
-    <p style = "text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Quaerat, ut. Tempore libero dolor deserunt omnis ipsum corrupti nisi quod nihil corporis iure, 
-      accusantium porro quam maxime culpa eos. Adipisci, alias.</p>
+  <div class = "col-md-8">
+    <p class="quotes">“The number of overfished stocks globally has tripled in half a century and today fully one-third of the world's assessed fisheries are currently pushed beyond their biological limits” <em><a href="https://www.worldwildlife.org/threats/overfishing" target="_blank">World Wildlife Fund</a></em><br/><br/>
+      “U.S. fisheries unintentionally catch almost 2,000 federally protected marine mammals, almost 12,000 sea turtles and more than 7,600 seabirds. Worldwide more than 650,000 marine mammals die as fishery “bycatch” annually.”--<em><a href="https://www.biologicaldiversity.org/campaigns/fisheries/" target="_blank">Center for Biological Diversity</a></em><br/><br/>
+      “1225 species affected. 34 percent of the species monitored ingest litter, 31 per cent colonize it, and 30 per cent get entangled or otherwise trapped in it”--<em><a href="https://www.awi.de/en/about-us/service/press/single-view/litter-is-present-throughout-the-worlds-oceans-1220-species-affected.html" target="_blank">Alfred-Wegener Institute</a></em><br/><br/>
+      “Human activities have resulted in the near doubling of nitrogen and tripling of phosphorus flows to the environment [which has lead to] loss of subaquatic vegetation, change in species composition, coral reef damage, low dissolved oxygen, and the formation of dead zones (oxygen-depleted waters) that can lead to ecosystem collapse” --<em><a href="https://www.wri.org/initiatives/eutrophication-and-hypoxia/learn" target="_blank">World Resources Institute</a></em><br/><br/>
+    </p>
   </div>
   <div class = "col-md-2">
-    <p style = "text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Quaerat, ut. </p>
+    <p style = "text-align: center;"></p>
   </div>
 </div>
-<div class="row" id="map-holder">
-  <!-- The div where we'll insert our map -->
-  <div id="map" class="col-md-6"></div>
-  <div class="col-md-5" id="data"></div>
-</div>
 
-
-<!-- JavaScript file -->
-<script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 
 </html>
