--- a/templates/process.html
+++ b/templates/process.html
@@ -48,7 +48,7 @@
 <div class="row">
   <div class="col-md-12 jumbotron text-center">
     <h1>Human Impact on Oceans Dashboard</h1>
-    <p>Glossary of terms found throughout our data</p>
+    <p>How did we get here?</p>
   </div>
 </div>
 
@@ -67,8 +67,8 @@
             Background
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item active" href="#">Key</a></li>
-            <li><a class="dropdown-item" href="/process">The Process</a></li>
+            <li><a class="dropdown-item" href="/key">Key</a></li>
+            <li><a class="dropdown-item active" href="#">The Process</a></li>
             <li><a class="dropdown-item" href="/sources">Data Sources</a></li>
           </ul>
         </li>
@@ -100,28 +100,30 @@
 <div class="row" id="map-holder">
   <!-- The div where we'll insert our map -->
   <div class="col-md-6 defs">
-      <h3>Map Explanations</h3>
+      <h3>The Concept</h3>
       <p>
-      <b>Eutrophication Map</b>: This is a map showing eutrophication in our oceans. Eutrophication is frequently caused by runoff from the land, and causes death of animal life from lack of oxygen.<br /><br />
-      <b>Eutrophic</b>: A body of water rich in nutrients, supporting dense plant population. This blocks off sunlight and causes other plant life to decompose. The loss of other plants leads to a loss of animals. As these plants and animals decompose, they emit CO<sub>2</sub>, further depriving the area of oxygen, killing marine life in the area and creating “dead zones”. 
-      <br /><br />
-      <b>Hypoxic</b>: Water that is hypoxic is low in oxygen, with dissolved oxygen concentrations of less than 2-3 mg/L. This can occur naturally due to differences in salinity, especially between rivers and oceans. However, it is increasingly caused by an excess of nutrients from humans that can lead to eutrophication. 
-      <br /><br />
-      <b>Improved</b>: This area is improving due to local government efforts to improve runoff infrastructure or improved waterflow.  <br /><br />
-      <b>FAO Fishing Areas</b>: FAO is an acronym for the Food and Agriculture Organization. This organization has defined the fishing zones. These zones can be seen on FAO's website <a href="https://www.fao.org/fishery/en/area/search" target="_blank">here</a>.<br />
+      We wanted to explore any data we could find on our oceans. As we began our search for data, we realized that there is <em>so much </em>out there! We had to hone in on more specific topics to look for data efficiently. <br/><br/>We decided to focus on the human impact on our oceans - or more specifically, eutrophication in coastal regions due to agricultural runoff, and how commercial fishing might be affecting fish populations and trash accumulation in the oceans. <br />
     </p>
 
+    <h3>Sourcing and Transforming Data</h3>
+    <p>
+    We did this with the fish data. <br /><br />
+    Commercial fishing vessel data was found via <a href="https://globalfishingwatch.org/" target="_blank">Global Fishing Watch</a>, a site with a purpose to create and publicly share data about human activity at sea. We created a Python script using Pandas to remove unnecessary columns of data, duplicated entries and false positives, then create separate .json files for the types of vessels and each one within the types. 
+    <br /><br />Marine debris data was found through Debristracker, a site whose main mission is to track marine debris which helps to collect and build a large dataset that assists researchers to help tackle the plastic-pollution problem.  We gathered data from 2012 to 2022 from all organizations that inputted data into the database , which generated more than 1.3 million data points across 4 different .csv files (2012-2014, 2015-17, 2018-2020, and 2021-2022) that had to be filtered, cleaned, and then merged. We used python code utilizing pandas to remove any unnecessary columns of the data, assign appropriate data types, remove values that were duplicated and of null values, and stripped the space on the data appropriately. We lastly created a .json file showing the cleaned data to be used for the creation  of other visuals. <br />
+  </p>
   </div>
   <div class="col-md-5 defs">
-      <h3>Boating/Fishing Terms</h3>
+    <h3>Visualizations</h3>
+    <p>
+        We leveraged the flexibility of Leaflet.js to add in plugins to modify markers and cluster data on CartoB's map.  With large datasets with many individual points, we used Turf.js, a secondary library for advanced geospatial analysis to algorithmically clean and smooth the data into cleaner lines. Colors schemes were created using ColorBrewer which is a swatch site specialized for maps and modified for personal use.
+        <br /><br />
+        We created the material and quantity time series visual utilizing the plotly.express module with the cleaned marine debris data and taking a sum of the data grouped by the material and quantity sorted by the year in ascending order. The material and radius time series visual was made using the same plotly.express module with the cleaned marine debris data and taking a sum of the radius data grouped by material only and then sorted by the year in ascending order.<br/><br/>
+        We created the geographic scatterplot of the item names and their quantities by using plotly.express module using the cleaned marine debris data utilizing the latitude and longitude values provided with the dataset and sorting by the year in ascending order. The geographic scatterplot of the debris materials and their radius was made using plotly.express and the cleaned marine debris data utilizing the latitude and longitude values provided with the dataset and sorting by the year in ascending order.<br />
+  </p>
+
+      <h3>Creating the Website</h3>
       <p>
-        <b>Trawler</b>: Commercial fishing boats which drag nets through the water to trap fish. This fishing method often leads to catching and killing ocean life not meant to be fished.<br /><br />
-        <b>Troller</b>: These fishing boats operate by allowing a line out with bait and using the current or motor power to pull the bait to attract fish.<br /><br />
-        <b>Pole and Line</b>: Boats where fishermen are using traditional pole and line fishing techniques.<br /><br />
-        <b>Purse Seine</b>: This is a large wall of netting dropped into the water around an entire school of fish.<br /><br />
-        <b>Drifting Longlines</b>: Vessels fishing with a drifting longline have a main line kept near the surface with many lines with baited hooks spaced evenly across it. <br /><br />
-        <b>AIS</b>: Automatic Identification System. Developed as a technology to avoid collisions among large sea vessels.<br /><br />
-        <b>MMSI</b>: Maritime Mobile Service Identity, an identifier for AIS.<br />
+        Pulling the data together into one place, we chose Javascript, HTML, Flask and MongoDB for our technology stack. The interactive maps and data visualizations are built in Javascript and rendered in HTML templates via a Python Flask application. Since our data is so large, we curated a subset of data to host in a noSQL database, MongoDB, to serve APIs. <br />
         
     </p>
   </div>
