--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,9 +114,21 @@ a {
 }
 
 .quotes {
-  font-size: 3rem;
-  line-height: 2.8rem;
+  font-size: 2.7rem;
+  line-height: 2.6rem;
 }
 .quotes a {
   font-size: 2rem;
+}
+.card {
+  margin: .35rem;
+  width: 11rem;
+}
+.card h5 {
+  color:rgb(41, 41, 41);
+}
+.card p {
+  vertical-align: bottom;
+  position: absolute;
+  bottom: 0;
 }
