incorporated Elliotts screenshots on Stephs carousel

--- a/templates/indirect.html
+++ b/templates/indirect.html
@@ -116,20 +116,89 @@
       <p style = "text-align: center;">Toggle the settings on the map below to explore our oceans. See the ocean currents, temperature, and eutrophication. Do you see any patterns? </p>
     </div>
     <div class = "col-md-6 justify-content-center">
-      <p style = "text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Quaerat, ut. Tempore libero dolor deserunt omnis ipsum corrupti nisi quod nihil corporis iure, 
-        accusantium porro quam maxime culpa eos. Adipisci, alias.</p>
+      <p style = "text-align: center;"></p>
     </div>
     <div class = "col-md-2">
-      <p style = "text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Quaerat, ut. </p>
+      <p style = "text-align: center;"></p>
     </div>
   </div>
   <div class="row" id="map-holder">
     <!-- The div where we'll insert our map -->
     <div id="map" class="col-md-6"></div>
-    <div class="col-md-5" id="data"></div>
+    <div class="col-md-5" id="data">
+      <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        </div>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2015_2016.png" class="d-block w-100" alt="...">
+            <h5>2015-16</h5>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2016_2017.png" class="d-block w-100" alt="...">
+            <h5>2016-17</h5>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2017_2018.png" class="d-block w-100" alt="...">
+            <h5>2017-18</h5>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2018_2019.png" class="d-block w-100" alt="...">
+            <h5>2018-19</h5>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2019_2020.png" class="d-block w-100" alt="...">
+            <h5>2019-20</h5>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2020_2021.png" class="d-block w-100" alt="...">
+            <h5>2020-21</h5>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <img src="static/img/Time_Series_Mat_Quan_2021_2022.png" class="d-block w-100" alt="...">
+            
+            <h5>2021-22</h5>
+           
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div id="explanation">
+        <br>
+        <h3>Measuring Plastic and Fishnets</h3>
+        <p>In these datasets, plastic is overwhelmingly represented in part to how they were counted. Each piece of plastic counts as one whole piece regardless of weight.
+          This system would count an enormous fishnet as one even though it is much larger.</p>
+        <hr>
+        <p>
+          However, this system and consequential skew is needed to account for the impact and pervasiveness of plastic and microplastics. These items are no less harmful in one piece or a hundred pieces. They do not decompose,
+          only broken down into smaller pieces that accumulate inside of animals. This will kill them, either by poisoning them or causing organ failure as they cannot digest it.
+          They also leach harmful chemicals into the water and sand, impacting the ocean's chemical balance and contributing to effects like eutrophication on a scale that cannot be underestimated.
+        </p>
+        <hr>
+        <p>
+          It is worth noting however, that fishing debris like nets and hooks are are underrepresented in beach cleanups as they often either sink to the bottom of the ocean where as much as 70% of all marine debris is estimated to end up or are pushed by currents. 
+          They are extremely harmful as they can entangle and harm multiple animals at once and any animal that is free can become re-entangled. The North Pacific Subtropical Gyre is notorious for having trash islands of accumulated fishing parnaphalia that is very 
+          difficult for scientists to trawl for data due to its density. Around these islands also swirls clouds of microplastics and other pieces, torn off their original parts by the waves. This has heavily disrupted fishing and wildlife in the area.
+        </p>
+      </div>
+    </div>
   </div>
+
+
 
 
   <!-- The div where we'll insert our map -->
