--- a/templates/data.html
+++ b/templates/data.html
@@ -105,8 +105,24 @@
       <h3>Our APIs</h3>
       <h5>Use the links below to access our data through API.</h5><br/>
       <p>
-      <b><a href="/api/trawlers">/api/trawlers</a></b>&nbsp;&nbsp;&nbsp; Data for all trawlers<br /><br />
-      <b><a href="/api/trawler/1252339803566">/api/trawler/&lt;MMSI&gt;</a></b>&nbsp;&nbsp;&nbsp; All datapoints for specified trawler by MMSI. Clicking this link will point you to MMSI 1252339803566 as an example.<br /><br />
+      <b><a href="/api/trawlers">/api/trawlers</a></b>&nbsp;&nbsp;&nbsp; Data for all trawlers sampled on our map.<br /><br />
+      <b><a href="/api/trawler/121426486551523">/api/trawler/&lt;MMSI&gt;</a></b>&nbsp;&nbsp;&nbsp; All datapoints for specified trawler by MMSI. Clicking this link will point you to MMSI 121426486551523 as an example. Full list of trawlers available: 
+      <ul>
+          <li>121426486551523</li>
+          <li>240226012373593</li>
+          <li>269119641458109</li>
+          <li>143906914639303</li>
+          <li>175387414441613</li>
+          <li>274850145767759</li>
+      </ul>
+      <b><a href="/api/purse_seines">/api/purse_seines</a></b>&nbsp;&nbsp;&nbsp; Data for all purse seines sampled on our map.<br /><br />
+      <b><a href="/api/purse_seine/39005622580143">/api/purse_seine/&lt;MMSI&gt;</a></b>&nbsp;&nbsp;&nbsp; All datapoints for specified purse seine by MMSI. Clicking this link will point you to MMSI 39005622580143 as an example. Full list of purse seines available: 
+      <ul>
+          <li>39005622580143</li>
+          <li>79111403404442</li>
+          <li>192803403297411</li>
+      </ul>
+      <b><a href="/api/trollers">/api/trollers</a></b>&nbsp;&nbsp;&nbsp; Data for the trollers sampled on our map. (Only one is used. MMSI 274063840293718.<br /><br />
       <b><a href="/api/marinedebris">/api/marinedebris</a></b>&nbsp;&nbsp;&nbsp; Data for all marine debris<br /><br />
       <b><a href="/api/marinedebris/METAL">/api/marinedebris/&lt;material&gt;</a></b>&nbsp;&nbsp;&nbsp; All datapoints for specified marine debris by material. Clicking this link will point you to METAL as an example. Full list of materials available (case sensitive): 
       <ul>
@@ -119,7 +135,7 @@
           <li>RUBBER</li>
           <li>FISHING GEAR</li>
           <li>OTHER ITEMS</li>
-      </ul><br /><br />
+      </ul><br />
     </p>
 
   </div>
