--- a/templates/indirect.html
+++ b/templates/indirect.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ocean Map</title>
+  <title>Fish Populations and Fishing in our Oceans</title>
 
   <!--import in bootstrap dependency-->
   <link rel="stylesheet" 
